# featureflags

./: .dockerignore  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  README.rst  config.yaml  docker-compose.yaml  lets.yaml  package-lock.json  package.json  pi.yaml  pyproject.toml  requirements-docs.in  requirements-docs.txt  requirements-tests.in  requirements-tests.txt  setup.cfg  tox.ini  tsconfig.json  webpack.base.js  webpack.dev.js  webpack.prod.js
.github/workflows/: python.yaml  release.yaml  test.yaml
.hooks/: pre-commit
adr/: 0001-record-architecture-decisions.md  0002-split-project-into-client-server-protobuf-clients.md  0003-slack-notifications-for-project-changes.md
client/: pyproject.toml  setup.py  tox.ini
client/featureflags/client/: compat.py  conditions.py  flags.py  state.py  utils.py
client/featureflags/client/managers/: asyncio.py  dummy.py  sync.py
client/tests/: conftest.py  test_conditions.py  test_flags.py  test_managers_asyncio.py  test_managers_dummy.py  test_utils.py
configs/: local.yaml  test.yaml
docker/: Dockerfile.server
docs/: client.rst  clients.rst  conditions.rst  conf.py  deployment.rst  development.rst  getting-start.rst  getting-started.rst  index.rst  integrations.rst  introduction.rst  notifications.rst  prometheus-metrics.rst  server.rst
docs/changelog/: client.rst  index.rst
docs/changelog/python-client/: changes_0.rst  index.rst
docs/changelog/server/: changes_1.rst  index.rst
docs/client/: index.rst  reference.rst  tracing.rst  variables.rst
docs/clients/: javascript.rst  python.rst
docs/introduction/: concepts.rst  server.rst
docs/server/: index.rst
docs/superpowers/specs/: 2026-06-12-slack-notifications-design.md
examples/: README.rst  aiohttp_app.py  config.py  flags.py  flask_app.py  sanic_app.py  wsgi_app.py
examples/http/: README.md  flags.py  flask_server.py
featureflags/: __init__.py  __main__.py  actions.py  alembic.py  auth.py  cli.py  config.py  container.py  errors.py  feedback.py  ldap.py  logging.py  metrics.py  models.py  schema.py  sentry.py  utils.py
featureflags/graph/: actions.py  constants.py  context.py  graph.py  metrics.py  proto.py  proto_adapter.py  types.py  utils.py
featureflags/http/: app.py  container.py  db.py  lifecycle.py  types.py
featureflags/http/api/: flags.py
featureflags/http/repositories/: flags.py
featureflags/migrations/: env.py
featureflags/migrations/versions/: 1876f90b58e8_added_feature_values_tables.py  2fa54f8b55c1_cleaup_condition_checks.py  33ace31b89cc_changelog_added.py  4d42cf3d11de_added_created_and_reported_timestamps.py  69f91d9fab0f_add_condition_position_column.py  8df4e7dd1897_delete_changelog_on_flag_delete.py  94e4203113b0_removed_auth_session_user_column.py  a1b2c3d4e5f6_add_oidc_subject_to_auth_user.py  a327a3ea7a5f_added_flags_and_values_name_idx.py  b3fbbe647373_init.py  cce98484f923_auth_user_table_added.py  f3a9c41e88d2_add_notification_channels.py
featureflags/protobuf/: backend.proto  backend_pb2.py  graph.proto  graph_pb2.py  service.proto  service_grpc.py  service_pb2.py  service_pb2_grpc.py
featureflags/rpc/: app.py  container.py  db.py  metrics.py  service.py  servicer.py  utils.py
featureflags/services/: auth.py  db.py  ldap.py  notifications.py  oidc_auth.py
featureflags/tests/: conftest.py  state.py  test_actions.py  test_config.py  test_graph.py  test_http_flags.py  test_notifications.py  test_oidc_auth.py  test_web.py  test_web_backend.py
featureflags/web/: app.py  backend.py  constants.py  container.py  lifecycle.py  middlewares.py  types.py
featureflags/web/api/: graph.py  health.py  index.py  oidc.py
protobuf/: pyproject.toml  setup.py
protobuf/featureflags/protobuf/: backend_pb2.py  graph_pb2.py  service_pb2.py  service_pb2_grpc.py
scripts/: build-copy-ui-dist.sh  disable-hooks.sh  enable-hooks.sh  pre-install.sh  protoc.sh  release.sh  release_check.sh
server/: MANIFEST.in  setup.py  setup.txt
server/featureflags/server/: __main__.py  actions.py  auth.py  config.py  feedback.py  ldap.py  logging.py  metrics.py  schema.py  utils.py
server/featureflags/server/graph/: graph.py  proto.py
server/featureflags/server/migrations/: env.py  script.py.mako
server/featureflags/server/migrations/versions/: 33ace31b89cc_changelog_added.py  8df4e7dd1897_delete_changelog_on_flag_delete.py  94e4203113b0_removed_auth_session_user_column.py  b3fbbe647373_init.py  cce98484f923_auth_user_table_added.py
server/featureflags/server/rpc/: metrics.py  service.py
server/featureflags/server/services/: db.py  ldap.py  tq.py
server/featureflags/server/web/: backend.py
server/featureflags/server/web/cs/: app.ts  index.html  iview.d.ts  proto.d.ts  proto.js  query.ts
server/featureflags/server/web/cs/components/: Check.vue  Conditions.vue  Flag.vue  Layout.vue  NotFound.vue  Page.vue  Root.vue  Search.vue  SignIn.vue  utils.ts
server/featureflags/server/web/cs/store/: actions.ts  getters.ts  index.ts  mutations.ts  types.ts  utils.ts
server/tests/: conftest.py  state.py  test_actions.py  test_config.py  test_feedback.py  test_graph.py  test_web_backend.py
ui/: build.sh  index.html  package-lock.json  package.json  vite.config.js
ui/src/: Auth.jsx  Base.jsx  Base.less  graphiql.jsx  hooks.jsx  main.jsx
ui/src/Dashboard/: Check.jsx  Check.less  Conditions.jsx  Conditions.less  Dashboard.jsx  Dashboard.less  Flag.jsx  Flag.less  Flags.jsx  Flags.less  NotificationChannels.jsx  Settings.jsx  Tabs.jsx  Tabs.less  Value.jsx  Value.less  ValueCheck.jsx  ValueConditions.jsx  ValueConditions.less  Values.jsx  Values.less  actions.js  constants.js  context.jsx  index.jsx  queries.js  utils.js
ui/src/components/: Logo.jsx  Spinner.jsx  Version.jsx
ui/src/context/: auth.jsx
