[project]
name = "evo-featureflags-client"
version = "0.3.2"
description = "Feature flags client"
authors = [
    {name = "m.kindritskiy", email = "m.kindritskiy@smartweb.com.ua"},
    {name = "Vladimir Magamedov",email = "vladimir@magamedov.com"},
]
dependencies = [
    "evo-featureflags-protobuf>=0.2.0",
    "hiku"
]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

