[project]
name = "evo-featureflags-client"
version = "0.3.3"
description = "Feature flags client"
authors = [
    {name = "m.kindritskiy", email = "m.kindritskiy@smartweb.com.ua"},
    {name = "Vladimir Magamedov",email = "vladimir@magamedov.com"},
]
dependencies = [
    "evo-featureflags-protobuf>=0.2.0",
    "hiku"
]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
test = "python -m pytest"

[tool.pdm.dev-dependencies]

test = [
    "pytest~=7.1",
    "pytest-asyncio~=0.18",
    "faker",
    "tox-pdm",
    "grpclib",
    "protobuf>=4.24.4",
    "grpcio",
    "evo-featureflags-protobuf @ file:///${PROJECT_ROOT}/../protobuf",
]

lint = [
    "flake8>=5.0.4",
    "evo-featureflags-protobuf @ file:///${PROJECT_ROOT}/../protobuf",
]

