[project]
name = "evo-featureflags-protobuf"
version = "0.2.1"
description = "Protocol Buffers stub files for feature flags service"
authors = [
    {name = "m.kindritskiy", email = "m.kindritskiy@smartweb.com.ua"},
    {name = "Vladimir Magamedov",email = "vladimir@magamedov.com"},
]
dependencies = []
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

